	* Sync geoipregionvars.php with fips codes from Jan, 14th 2009 ( Boris Zentner )
	* use metro_code in sample_city.php ( Boris Zentner )  
	* replace the depreciated dma_code field with metro_code ( Boris Zentner )
	* remove wrong but unreferenced Singapur SG fips regions codes ( Boris Zentner )  
	* update regions ( geoipregionvars.php ) ( Boris Zentner )
	* Die when the database file is not found or readable ( Boris Zentner ) 
1.7	2008-1-8
	* Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
	* fixed bug with newlines in Country Name
	* replaced $s_array[size] with $s_array['size'] (Daniel Horchner)
	* Fix bug where PHP API didn't work with new edition of GeoIP ISP

1.6	2007-1-10
	* Added AX/Aland Islands, GG/Guernsey, IM/Isle of Man, JE/Jersey (ISO-3166-1 changes)
	* Replaced CS/Serbia and Montenegro with RS/Serbia, removed ZR/Zaire, added ME/Montenegro
	* geoip_country_(code|name)_by_addr now work against Geo(IP|Lite) City (Frank Mather)
	* Added code to lookup zoneinfo timezone given country and region (Frank Mather)
	* TP/East Timor changed to TL/Timor-Leste, reflecting changes in ISO-3166

1.5	2005-11-1
	* Added Shared Memory support for GeoIP City (Frank Mather)
	* Replaced Yugoslavia with Serbia and Montenegro
	* Removed global declaration for $GEOIP_COUNTRY_CODE_TO_NUMBER, $GEOIP_COUNTRY_CODES,
		and $GEOIP_COUNTRY_CODES3 

1.4	2005-01-13   Andrew Hill, Awarez Ltd. (http://www.awarez.net)
 *              Formatted file according to PEAR library standards.
 *              Moved $GEOIP_COUNTRY_CODE_TO_NUMBER, $GEOIP_COUNTRY_CODES,
 *                  $GEOIP_COUNTRY_CODES3 and $GEOIP_COUNTRY_NAMES into the
 *                  GeoIP class, so that library will still work even when
 *                  not included in the $GLOBAL context.

	* Updated geoip_country_code_by_addr to work with PHP5 (Eric of Host Ultra)
	* Replaced bit operators (| and &) with logical operators (|| and &&)
	* Defined GEOIP_ISP_EDITION

1.3	2004-8-4